--- a/force-app/main/default/lwc/modalTaskForm/modalTaskForm.html
+++ b/force-app/main/default/lwc/modalTaskForm/modalTaskForm.html
@@ -13,10 +13,10 @@
                 <h1 id="modal-heading-01" class="slds-modal__title slds-hyphenate">{headerTitle}</h1>
             </div>
             <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
-                <lightning-input name="Title__c" value={title} label="件名"
+                <lightning-input name="Title__c" value={title} label="Title"
                     variant="label-stacked" onchange={handleChangeValue} class="input" required>
                 </lightning-input>
-                <lightning-input name="Body__c" value={body} label="内容" variant="label-stacked"
+                <lightning-input name="Body__c" value={body} label="Content" variant="label-stacked"
                     onchange={handleChangeValue} class="input" required>
                 </lightning-input>
             </div>
