--- a/force-app/main/default/lwc/modalTaskForm/modalTaskForm.html
+++ b/force-app/main/default/lwc/modalTaskForm/modalTaskForm.html
@@ -1,30 +1,46 @@
 <template>
-  <template if:true={showModal}>
-    <section role="dialog" tabindex="-1" aria-modal="true" aria-labelledby="modal-heading-01"
-        class="slds-modal slds-fade-in-open">
-        <div class="slds-modal__container">
-            <button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse" title="Close"
-                onclick={handleDialogClose}>
-                <lightning-icon icon-name="utility:close" alternative-text="close" variant="inverse" size="small">
-                </lightning-icon>
-                <span class="slds-assistive-text">Close</span>
-            </button>
-            <div class="slds-modal__header">
-                <h1 id="modal-heading-01" class="slds-modal__title slds-hyphenate">{headerTitle}</h1>
+    <template if:true={showModal}>
+        <section role="dialog" tabindex="-1" aria-modal="true" aria-labelledby="modal-heading-01" class="slds-modal slds-fade-in-open">
+            <div class="slds-modal__container">
+                <button
+                    class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
+                    title="Close"
+                    onclick={handleDialogClose}
+                >
+                    <lightning-icon icon-name="utility:close" alternative-text="close" variant="inverse" size="small">
+                    </lightning-icon>
+                    <span class="slds-assistive-text">Close</span>
+                </button>
+                <div class="slds-modal__header">
+                    <h1 id="modal-heading-01" class="slds-modal__title slds-hyphenate">{headerTitle}</h1>
+                </div>
+                <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
+                    <lightning-input
+                        name="Title__c"
+                        value={title}
+                        label="Title"
+                        variant="label-stacked"
+                        onchange={handleChangeValue}
+                        class="input"
+                        required
+                    >
+                    </lightning-input>
+                    <lightning-input
+                        name="Body__c"
+                        value={body}
+                        label="Content"
+                        variant="label-stacked"
+                        onchange={handleChangeValue}
+                        class="input"
+                        required
+                    >
+                    </lightning-input>
+                </div>
+                <div class="slds-modal__footer">
+                    <button class="slds-button slds-button_brand" onclick={handleSave}>{submitTitle}</button>
+                </div>
             </div>
-            <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
-                <lightning-input name="Title__c" value={title} label="Title"
-                    variant="label-stacked" onchange={handleChangeValue} class="input" required>
-                </lightning-input>
-                <lightning-input name="Body__c" value={body} label="Content" variant="label-stacked"
-                    onchange={handleChangeValue} class="input" required>
-                </lightning-input>
-            </div>
-            <div class="slds-modal__footer">
-                <button class="slds-button slds-button_brand" onclick={handleSave}>{submitTitle}</button>
-            </div>
-        </div>
-    </section>
-    <div class="slds-backdrop slds-backdrop_open" role="presentation"></div>
-  </template>
+        </section>
+        <div class="slds-backdrop slds-backdrop_open" role="presentation"></div>
+    </template>
 </template>
