set Default Focus

--- a/force-app/main/default/lwc/modalTaskForm/modalTaskForm.html
+++ b/force-app/main/default/lwc/modalTaskForm/modalTaskForm.html
@@ -22,6 +22,7 @@
                         variant="label-stacked"
                         onchange={handleChangeValue}
                         class="input"
+                        data-name="Title__c"
                         required
                     >
                     </lightning-input>
